20240907 @Mookse - member chat input overflow handled incorrectly on extra-long text - submit button should stop scaling with size - align chat center

--- a/views/assets/css/chat.css
+++ b/views/assets/css/chat.css
@@ -145,6 +145,7 @@
 }
 .chat-member-container,
 .chat-user-container {
+	align-items: center;
 	display: flex;
 	flex-direction: row;
 	width: 100%;
